<resources>

    <string name="app_name">Comp 2000 project</string>
    <string name="Log_in">Log in</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Password_input">Enter your password</string>
    <string name="loginButton">Log in</string>
    <string name="label_name">Name</string>
    <string name="label_gender">Gender</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_join_date">Join Date</string>
    <string name="label_email">Email</string>

    <string name="hint_name">Enter your name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_dob">DD/MM/YYYY</string>
    <string name="hint_join_date">DD/MM/YYYY</string>
    <string name="hint_email">Enter your email</string>


    <string name="settings">Settings</string>
    <string name="request_holiday">Request Holiday</string>
    <string name="personal_information">Personal Information</string>
    <string name="logout">Logout</string>

    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="reason_label">Reason</string>
    <string name="hint_reason">Enter the reason</string>
    <string name="remaining_leave_label">Remaining Leave:</string>
    <string name="holiday_status_label">Holiday Request Status</string>
    <string name="remaining_leave">N/A</string>

    <string name="holiday_request_checkbox">Update to Holiday Request</string>
    <string name="update_details_checkbox">Update to Details</string>

    <string name="employee_name">Employee Name: John Doe</string>
    <string name="request_date">Date: 01/12/2024 - 03/12/2024</string>
    <string name="reason">Reason: Family Commitment</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>


    <string name="select_employee">Select Employee</string>
    <string name="employee_name_1">Employee Name 1</string>
    <string name="employee_name_2">Employee Name 2</string>
    <string name="employee_name_3">Employee Name 3</string>
    <string name="employee_name_4">Employee Name 4</string>
    <string name="employee_name_5">Employee Name 5</string>
    <string name="employee_name_6">Employee Name 6</string>

    <string name="employee_portrait">Employee Portrait</string>

</resources>
