<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/employeeHomeRoot"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Settings Button -->
    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="96dp"
        android:padding="12dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Request Holiday Button -->
    <Button
        android:id="@+id/PersonalHolidayButton"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="164dp"
        android:padding="12dp"
        android:text="@string/request_holiday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Personal Information Button -->
    <Button
        android:id="@+id/PersonalInformation"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="231dp"
        android:padding="12dp"
        android:text="@string/personal_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logout Button -->
    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="121dp"
        android:layout_height="114dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="437dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/logout"
        android:src="@drawable/logout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
