<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/requestHolidayRoot">
    <!-- Remaining Leave Value -->
    <TextView
        android:id="@+id/remainingLeaveLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/remaining_leave_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/remainingLeaveValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:text="@string/remaining_leave"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/remainingLeaveLabel"
        app:layout_constraintTop_toTopOf="@+id/remainingLeaveLabel" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="304dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/StartDate"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_dob"
        android:inputType="date"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/start_date_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EndDate"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_dob"
        android:inputType="date"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="60dp"
        android:text="@string/end_date_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ReasonEdit"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/reason_label"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="5"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reasonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:text="@string/reason_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="121dp"
        android:layout_height="114dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="628dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/logout"
        android:src="@drawable/logout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>