<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsRoot">

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="121dp"
        android:layout_height="114dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="556dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/logout"
        android:src="@drawable/logout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_holiday"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="152dp"
        android:text="@string/holiday_request_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkbox_details"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="232dp"
        android:text="@string/update_details_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
